# skyrim_potion_cocktail_mod

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
companion_app/: README.md  launcher.py  runtime-manifest.json
companion_app/packaging/: PLAYER_README.md  README.md  RELEASE_NOTES_TEMPLATE.md  skyrim-potion-cocktails.spec  windows-build.md
companion_app/runtime/app/: __init__.py  app_factory.py  config.py  db.py  main.py  schemas.py  services.py
companion_app/runtime/app/data/: ingredients.json
companion_app/runtime/app/routes/: __init__.py  characters.py  ingredients.py  pages.py
companion_app/runtime/app/static/: index.html
docs/: divergences.md  implementation-plan.md  nexus-packaging.md  roadmap.md  skyrim-bridge.md  source-of-truth.md
shared/: README.md
shared/domain/: rarity.py
shared/exchange/: skyrim-bridge.schema.json
shared/exchange/examples/: skyrim-bridge-export.json
shared/manifests/: source-baseline.json
shared/source_docs/: AGENTS.md  discovery-scoring.md  handoff.md
skyrim_mod/: README.md
skyrim_mod/data/: README.md  ingredient-form-map.json
skyrim_mod/source/scripts/: SPC_BridgeInventoryExporter.psc
tests/: test_skyrim_bridge_import.py  test_skyrim_inventory_mapping.py
tools/: build_companion.py  hash_release.py  import_skyrim_bridge.py  import_source_baseline.py  inspect_companion_dist.py  stage_companion_release.py  sync_companion_runtime.py  validate_companion_runtime.py  validate_shared_baseline.py  validate_skyrim_mapping.py
